# simd-function

./: .gitignore  README.md
bool_optimization/: CMakeLists.txt  optimize.cpp
src/: simd.hpp  simd_function.py
tests/: md4.py  md4_plain_c.c  md5.py  operators.py  operators_plain_c.c  sha1.py  sha256.py  sha512.py
